# minimal_cpp_with_rust_struct

./: CMakeLists.txt  Cargo.toml  README.md
src/: lib.rs  main.cpp
